<resources>
    <string name="app_name">Samadhaan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Samadhaan">Samadhaan</string>
    <string name="andhraPradesh">Andhra Pradesh</string>
    <string name="arunachalPradesh">Arunachal Pradesh</string>
    <string name="assam">Assam</string>
    <string name="bihar">Bihar</string>
    <string name="chattisgarh">Chattisgarh</string>
    <string name="goa">Goa</string>
    <string name="gujarat">Gujarat</string>
    <string name="haryana">Haryana</string>
    <string name="himachalPradesh">Himachal Pradesh</string>
    <string name="jammuAndKashmir">Jammu and Kashmir</string>
    <string name="Jharkhand">Jharkhand</string>
    <string name="karnataka">Karnataka</string>
    <string name="Kerala">Kerala</string>
    <string name="madhyaPradesh">Madhya Pradesh</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="manipur">Manipur</string>
    <string name="meghalaya">Meghalaya</string>
    <string name="mizoram">Mizoram</string>
    <string name="nagaland">Nagaland</string>
    <string name="odhisha">Odhisha</string>
    <string name="punjab">Punjab</string>
    <string name="rajasthan">Rajasthan</string>
    <string name="sikkim">Sikkim</string>
    <string name="tamilNadu">Tamil Nadu</string>
    <string name="telangana">Telangana</string>
    <string name="Tripura">Tripura</string>
    <string name="uttarakhand">Uttarakhand</string>
    <string name="UttarPradesh">UttarPradesh</string>
    <string name="WestBengal">West Bengal</string>
    <string name="AndamanAndNicobarIslands">Andaman and Nicobar Islands</string>
    <string name="DadraAndNagarHaveli">Dadra and Nagar Haveli</string>
    <string name="NCTofDelhi">NCT of Delhi</string>
    <string name="puducherry">Puducherry</string>
    <string name="chandigarh">Chandigarh</string>
    <string name="damanAndDiu">Daman and Diu</string>
    <string name="lakshadweep">Lakshadweep</string>
    <string name="udhyog_adhaar">Udhyog Adhaar:</string>
    <string name="udhyog_name">Udhyog Name:</string>
    <string name="address">Address:</string>
    <string name="district">District:</string>
    <string name="pincode">Pincode:</string>
    <string name="state">State:</string>
    <string name="type_of_organisation">Type of organisation:</string>
    <string name="business_activity">Business Activity:</string>
    <string name="no_of_employees">No. of employees:</string>
    <string name="next">Next</string>
    <string name="manufacturing">Manufacturing</string>
    <string name="service">Service</string>
    <string name="trust">Trust</string>
    <string name="society">Society</string>
    <string name="self_help_group">Self help group</string>
    <string name="public_limited">Public limited</string>
    <string name="private_limited">Private limited</string>
    <string name="cooperativeSociety">Co-operative society</string>
    <string name="limited_liability_partnership">Limited Liability partnership</string>
    <string name="partnership">Partnership</string>
    <string name="proprietorship">Proprietorship</string>
    <string name="minority">Minority</string>
    <string name="st">ST</string>
    <string name="sc">SC</string>
    <string name="obc">OBC</string>
    <string name="general">General</string>
    <string name="new_application">New Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="petitioner">Petitioner</string>
    <string name="respondent">Respondent</string>
    <string name="uploads">Uploads</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter Email</string>
    <string name="type_of_petitioner">Type of petitioner:</string>
    <string name="small">Small</string>
    <string name="micro">Micro</string>
    <string name="respondent_name">Respondent Name</string>
    <string name="respondent_in_form">Respondent:</string>
    <string name="respondent_address">Respondent address</string>
    <string name="respondent_district">Respondent District</string>
    <string name="phone">Phone:</string>
    <string name="respondent_phone_no">Respondent Phone no.</string>
    <string name="respondent_email">Respondent Email</string>
    <string name="amount">Amount:</string>
    <string name="amount_payable">Amount payable</string>
    <string name="work_order_details">Work order details:</string>
    <string name="work_order_1">Work order 1:</string>
    <string name="work_order_no">Work order no.</string>
    <string name="date">Date:</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="work_order_2">Work order 2:</string>
    <string name="work_order_3">Work Order 3:</string>
    <string name="upload_merged_pdf_of_all_work_orders">Upload merged PDF of all work orders</string>
    <string name="not_uploaded_yet">Not uploaded yet</string>
    <string name="invoice_details">Invoice details:</string>
    <string name="invoice_1">Invoice 1:</string>
    <string name="invoice_number">Invoice number</string>
    <string name="invoice_2">Invoice 2:</string>
    <string name="invoice_3">Invoice 3:</string>
    <string name="upload_merged_pdf_of_all_invoices">Upload merged pdf of all invoices</string>
    <string name="submit">Submit</string>
    <string name="uploaded_successfully">Uploaded successfully</string>
    <string name="pending_approval">Pending approval</string>
    <string name="name">Name:</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="adhaar">Adhaar:</string>
    <string name="enter_adhaar_no">Enter Adhaar No.</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="your_social_category">Your social category:</string>
    <string name="council">Council:</string>
    <string name="application_filed_by_mse">Applications filed by MSE</string>
    <string name="total_amount_involved">Total amount involved</string>
    <string name="applications_mutually_settled">Applications mutually settled</string>
    <string name="applications_pending">Applications pending</string>
    <string name="applications_rejected_by_msefc">Applications rejected by MSEFC Council</string>
    <string name="applications_disposed_by_msefc_council">Applications disposed by MSEFC Council</string>
    <string name="more_information">More Information</string>
    <string name="ministry">Ministry</string>
    <string name="category">Category</string>
    <string name="central_ministry">Central Ministry</string>
    <string name="state_ministry">State Ministry</string>
    <string name="applications_filed">Applications Filed:</string>
    <string name="type_of_account">Type of account:</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="search">Search by UAID</string>
    <string name="available">Available</string>

</resources>
